@@ -166,6 +166,12 @@ function db_select_db($dbname){
 	return $r;
 }
 
+function db_real_escape_string($string){
+	global $mysqli_resource;
+	$r = $mysqli_resource->real_escape_string($string);
+	return $r;
+}
+
 function db_free_result($result){
 	if (is_array($result)){
 		//cached data
